--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,16 @@
   top: 0;
   z-index: 10;
 }
+
+.perspective {
+  perspective: 1000px;
+}
+.transform-style-preserve-3d {
+  transform-style: preserve-3d;
+}
+.backface-hidden {
+  backface-visibility: hidden;
+}
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
